# Ferrum

./: .gitignore  LICENSE  README.md
c-compiler/: CMakeLists.txt  start.sh
c-compiler/includes/: AST.h  common.h  deque.h  ferrum.h  io.h  keywords.h  lexer.h  list.h  operators.h  parser.h  token.h
c-compiler/includes/checker/: checker.h  context.h  functions.h  pre_checker.h  symbol.h  symbols.h  typing.h
c-compiler/includes/checker/typing/: dimensions.h  gathering.h  groups.h  solver.h  typechecker.h
c-compiler/includes/codegen/: AST.h  builtin.h  checker.h  functions.h  gen.h  llvm.h  types.h
c-compiler/includes/common/: ID.h  arena.h  block_arena.h  buffer.h  bufferstring.h  common.h  defines.h  deque.h  hashmap.h  io.h  list.h  logger.h  macro.h  math.h  sourcespan.h  sparselist.h  string.h
c-compiler/includes/common/data/: hashmap.h  sourcespan.h  string.h  symbolmap.h
c-compiler/includes/common/memory/: arena.h  block_arena.h  bufferstring.h
c-compiler/includes/parser/: AST.h  keywords.h  lexer.h  modules.h  operators.h  parser.h  token.h  types.h
c-compiler/includes/tables/: interner.h  member_functions.h  module_registry.h  registry.h  registry_manager.h  symbol.h  symbol_table.h
c-compiler/src/: AST.c  deque.c  ferrum.c  io.c  list.c  main.c
c-compiler/src/checker/: checker.c  context.c  functions.c  pre_checker.c  symbol.c  symbols.c  typing.c
c-compiler/src/checker/typing/: dimensions.c  gathering.c  groups.c  solver.c  union.c
c-compiler/src/codegen/: AST.c  builtin.c  checker.c  functions.c  gen.c  generator.c  llvm.c  types.c
c-compiler/src/common/: arena.c  block_arena.c  buffer.c  deque.c  hashmap.c  io.c  list.c  logger.c  sourcespan.c  sparselist.c  string.c
c-compiler/src/common/data/: list.c  sourcespan.c  string.c  symbolmap.c
c-compiler/src/common/memory/: arena.c  block_arena.c  buffer.c
c-compiler/src/parser/: AST.c  expr.c  keywords.c  lexer.c  modules.c  operators.c  parser.c  token.c  types.c
c-compiler/src/tables/: interner.c  member_functions.c  module_registry.c  registry.c  registry_manager.c  symbol.c  symbol_table.c
examples/: arithmetic.fe  base.fe  fib.fe  fib_recursive.fe  for.fe  list.fe  math.fe  numeric.fe  pow.fe  test.fe  test2.fe  testing.fe  types.fe
examples/std/: lib.fe
examples/std/groups/: numeric.fe
examples/std/memory/: allocation.fe
examples/std/ops/: op.fe
examples/std/ops/address/: address_of.fe  dereference.fe  subscript.fe
examples/std/ops/arithmetic/: addition.fe  division.fe  multiplication.fe  post_decrement.fe  post_increment.fe  pre_decrement.fe  pre_increment.fe  subtraction.fe
examples/std/ops/assignment/: assignment.fe
examples/std/ops/cast/: bit_cast.fe  cast.fe
examples/std/ops/relational/: equal.fe  greater_equal_to.fe  greater_than.fe  less_equal_to.fe  less_than.fe
examples/std/semantics/: copy.fe  implicit_cast.fe  move.fe  place.fe
examples/std/storage/: list.fe  slice.fe
examples/std/traits/: size.fe
